changed padding to prevent text getting too close to border on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,8 @@ a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.Blog-home {
+  /* display: grid; */
+  padding: 30px;
+}
